feat: add create report session
